--- a/appsettings.json
+++ b/appsettings.json
@@ -830,4 +830,12 @@
     "Default": "false",
     "Options": []
   }
+  {
+    "Name": "App:CustomerProductValue",
+    "Description": "setting to influence which ID is displayed in the pages",
+    "DataType": "string",
+    "Tickets": [],
+    "Default": "ProductID",
+    "Options": []
+  }
 ]
