--- a/appsettings.json
+++ b/appsettings.json
@@ -837,5 +837,13 @@
     "Tickets": [],
     "Default": "ProductID",
     "Options": []
+  },
+  {
+    "Name": "App:OrganizationUnit:AirportOU",
+    "Description": "Determines whether to show the flights tab on the organization unit or not",
+    "DataType": "bool",
+    "Tickets": [],
+    "Default": "false",
+    "Options": []
   }
 ]
