--- a/appsettings.json
+++ b/appsettings.json
@@ -845,5 +845,13 @@
     "Tickets": [],
     "Default": "false",
     "Options": []
+  },
+  {
+    "Name": "App:Shipment:UrlContainsSlash",
+    "Description": "Determines whether a slash still needs to be added or not to make the tracking link clickable",
+    "DataType": "bool",
+    "Tickets": [],
+    "Default": "false",
+    "Options": []
   }
 ]
