feat(app-settings): add CFD app settings

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,5 +1,53 @@
 [
   {
+    "Name": "App:CFD:Contentful:SpaceID",
+    "Description": "The Contentful SpaceID, belonging tot the CFD content space",
+    "DataType": "string",
+    "Tickets": [],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:CFD:Contentful:AccessToken",
+    "Description": "The Contentful Content Delivery Token, linked to the CFD content space",
+    "DataType": "string",
+    "Tickets": [],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:CFD:Contentful:Environment",
+    "Description": "The (optional) Contentful environment. Defaults to master",
+    "DataType": "string",
+    "Tickets": [],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:CFD:Contentful:Environment",
+    "Description": "The Contentful environment. Defaults to master",
+    "DataType": "string",
+    "Tickets": [],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:CFD:Lokalise:AccessToken",
+    "Description": "Lokalise SDK Token",
+    "DataType": "string",
+    "Tickets": [],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:CFD:Lokalise:ProjectID",
+    "Description": "Lokalise Project ID",
+    "DataType": "string",
+    "Tickets": [],
+    "Default": "",
+    "Options": []
+  },
+  {
     "Name": "App:ScanTarget",
     "Description": "{ Details = 0, Cart = 1 }",
     "DataType": "int",
@@ -67,9 +115,7 @@
     "Name": "App:Customer:SuggestUpdateAddressOnOpenOrders",
     "Description": "Whether we open up a special page to suggest the user to update open orders",
     "DataType": "bool",
-    "Tickets": [
-      "OPTR-6971"
-    ],
+    "Tickets": ["OPTR-6971"],
     "Default": "",
     "Options": []
   },
@@ -125,9 +171,7 @@
     "Name": "App:Customer:ShowPreview",
     "Description": "Whether to show the customer details page after customer creation or not",
     "DataType": "bool",
-    "Tickets": [
-      "OPTR-3446"
-    ],
+    "Tickets": ["OPTR-3446"],
     "Default": "false",
     "Options": []
   },
@@ -135,9 +179,7 @@
     "Name": "App:Customer:ShowCompany",
     "Description": "Whether we show the company fields in the customer create/edit page",
     "DataType": "bool",
-    "Tickets": [
-      "OPTR-7935"
-    ],
+    "Tickets": ["OPTR-7935"],
     "Default": "false",
     "Options": []
   },
@@ -153,9 +195,7 @@
     "Name": "App:Customer:UseSocialSecurityNumberLookup",
     "Description": "Whether the social security number functionality is enabled or not",
     "DataType": "bool",
-    "Tickets": [
-      "OPTR-1672"
-    ],
+    "Tickets": ["OPTR-1672"],
     "Default": "false",
     "Options": []
   },
@@ -171,9 +211,7 @@
     "Name": "App:Order:ShowVatNumber",
     "Description": "Whether to show the vat number tile or not",
     "DataType": "bool",
-    "Tickets": [
-      "OPTR-2435"
-    ],
+    "Tickets": ["OPTR-2435"],
     "Default": "false",
     "Options": []
   },
@@ -181,10 +219,7 @@
     "Name": "App:Order:ShowEstimatedDeliveryTime",
     "Description": "Determines whether we render the delivery proposition card non the checkout or not",
     "DataType": "bool",
-    "Tickets": [
-      "OPTR-5542",
-      " OPTR-4802"
-    ],
+    "Tickets": ["OPTR-5542", " OPTR-4802"],
     "Default": "false",
     "Options": []
   },
@@ -192,9 +227,7 @@
     "Name": "App:Order:ShowCustomerReference",
     "Description": "Determine whether to show the customer reference field when on delivery",
     "DataType": "bool",
-    "Tickets": [
-      "OPTR-3244"
-    ],
+    "Tickets": ["OPTR-3244"],
     "Default": "false",
     "Options": []
   },
@@ -226,9 +259,7 @@
     "Name": "App:Documents:DefaultEmailInvoice",
     "Description": "Determines the default value of the email checkbox in the print order pop up ( in the checkout )",
     "DataType": "bool",
-    "Tickets": [
-      "OPTR-5327"
-    ],
+    "Tickets": ["OPTR-5327"],
     "Default": "false",
     "Options": []
   },
@@ -244,9 +275,7 @@
     "Name": "App:Documents:ShowPrintGiftReceipt",
     "Description": "Will be used to determine if we show print gift receipt or not",
     "DataType": "bool",
-    "Tickets": [
-      "OPTR-5407"
-    ],
+    "Tickets": ["OPTR-5407"],
     "Default": "true",
     "Options": []
   },
@@ -270,9 +299,7 @@
     "Name": "App:Search:ProductProperties",
     "Description": "What product properties to filter on",
     "DataType": "string[]",
-    "Tickets": [
-      "OPTR-2965"
-    ],
+    "Tickets": ["OPTR-2965"],
     "Default": "",
     "Options": []
   },
@@ -312,9 +339,7 @@
     "Name": "App:Subscriptions:Enabled",
     "Description": "Whether to use the new subscriptions or not",
     "DataType": "bool",
-    "Tickets": [
-      "OPTR-4424"
-    ],
+    "Tickets": ["OPTR-4424"],
     "Default": "",
     "Options": []
   },
@@ -426,9 +451,7 @@
     "Name": "App:GiftCard:DefaultType",
     "Description": "The default giftcard type",
     "DataType": "string",
-    "Tickets": [
-      "OPTR-2220"
-    ],
+    "Tickets": ["OPTR-2220"],
     "Default": "",
     "Options": []
   },
@@ -452,9 +475,7 @@
     "Name": "App:CashExpense:Image:Enforced",
     "Description": "Enforce stores to always include a receipt photo when customers add expenses.",
     "DataType": "bool",
-    "Tickets": [
-      "OPTR-16350"
-    ],
+    "Tickets": ["OPTR-16350"],
     "Default": "false",
     "Options": []
   },
@@ -494,9 +515,7 @@
     "Name": "App:Checkout:ProductSearchTemplateID",
     "Description": "Whenever we have a quick buy option in the checkout, we will use this setting to find quick buy products",
     "DataType": "int",
-    "Tickets": [
-      "OPTR-7702"
-    ],
+    "Tickets": ["OPTR-7702"],
     "Default": "",
     "Options": []
   },
@@ -504,9 +523,7 @@
     "Name": "App:Shipping:ProductSearchTemplateID",
     "Description": "Based on this, we will show / hide the quick bag select option in the SFS ship page",
     "DataType": "int",
-    "Tickets": [
-      "OPTR-8915"
-    ],
+    "Tickets": ["OPTR-8915"],
     "Default": "",
     "Options": []
   },
@@ -538,9 +555,7 @@
     "Name": "App:AllowSoldByOverride",
     "Description": "Detemines whether we show a 'sold by' tile on the checkout or not",
     "DataType": "bool",
-    "Tickets": [
-      "OPTR-7937"
-    ],
+    "Tickets": ["OPTR-7937"],
     "Default": "false",
     "Options": []
   },
@@ -548,9 +563,7 @@
     "Name": "App:ShowStationSelectorOnLogin",
     "Description": "Whether we show the station selector after login or not",
     "DataType": "bool",
-    "Tickets": [
-      "OPTR-8450"
-    ],
+    "Tickets": ["OPTR-8450"],
     "Default": "false",
     "Options": []
   },
@@ -558,9 +571,7 @@
     "Name": "App:ShipFromStore:AllowPartialPick",
     "Description": "Whether partial picking is allowed for ship from store (pick) tasks or not",
     "DataType": "bool",
-    "Tickets": [
-      "OPTR-9412"
-    ],
+    "Tickets": ["OPTR-9412"],
     "Default": "false",
     "Options": []
   },
@@ -568,9 +579,7 @@
     "Name": "App:ShipFromStore:PaymentMethods",
     "Description": "What payment methods to show for ship from store (delivery) tasks",
     "DataType": "string[]",
-    "Tickets": [
-      "OPTR-9989"
-    ],
+    "Tickets": ["OPTR-9989"],
     "Default": "EVAPAY,CASH",
     "Options": []
   },
@@ -594,9 +603,7 @@
     "Name": "App:ShipFromStore:SupportMultipleShipments",
     "Description": "Whether the SFS flow supports multiple shipments or not",
     "DataType": "bool",
-    "Tickets": [
-      "OPTR-10347"
-    ],
+    "Tickets": ["OPTR-10347"],
     "Default": "false",
     "Options": []
   },
@@ -612,9 +619,7 @@
     "Name": "App:Feature:StockReplenishmentTask:Enabled",
     "Description": "Whether the runner tasks functionality is enabled or not",
     "DataType": "bool",
-    "Tickets": [
-      "OPTR-3185"
-    ],
+    "Tickets": ["OPTR-3185"],
     "Default": "true",
     "Options": []
   },
@@ -622,9 +627,7 @@
     "Name": "App:Feature:LockOnOrganizationUnit:Enabled",
     "Description": "Whether we save the organisation unit logged in with or not",
     "DataType": "bool",
-    "Tickets": [
-      "OPTR-9714"
-    ],
+    "Tickets": ["OPTR-9714"],
     "Default": "false",
     "Options": []
   },
@@ -632,9 +635,7 @@
     "Name": "App:Checkout:ShowSignOrder",
     "Description": "Whether to show the signature button in the checkout or not",
     "DataType": "bool",
-    "Tickets": [
-      "OPTR-2553"
-    ],
+    "Tickets": ["OPTR-2553"],
     "Default": "false",
     "Options": []
   },
@@ -798,7 +799,7 @@
     "Default": false,
     "Options": []
   },
-   {
+  {
     "Name": "App:Shipments:AutoGenerateShipmentBackendIDForInterbranchOrders",
     "Description": "Ignore given backendID on shipment create and generate EVA backendID (only on interbranch)",
     "DataType": "bool",
@@ -813,7 +814,7 @@
     "Tickets": [],
     "Default": "",
     "Options": []
-  }, 
+  },
   {
     "Name": "App:ShipFromStore:DeterminationType",
     "Description": "this setting determines which task should be picked first",
@@ -871,11 +872,27 @@
     "Options": []
   },
   {
+    "Name": "App:Loyalty:OnboardingQRUrl",
+    "Description": "Onboarding URL for loyalty members",
+    "DataType": "string",
+    "Tickets": [],
+    "Default": null,
+    "Options": []
+  },
+  {
+    "Name": "App:Loyalty:WalletQRUrl",
+    "Description": "The Add to Apple Wallet URL",
+    "DataType": "string",
+    "Tickets": [],
+    "Default": null,
+    "Options": []
+  },
+  {
     "Name": "App:Order:ShowCustomFields",
     "Description": "Determine which order custom fields will show up as order options. values should be backendid",
     "DataType": "string",
     "Tickets": [],
     "Default": null,
     "Options": []
-  },
+  }
 ]
