feature(appsettings): adds App:Pos:DefaultRoute

--- a/appsettings.json
+++ b/appsettings.json
@@ -688,6 +688,21 @@
     "Options": []
   },
   {
+    "Name": "App:Pos:DefaultRoute",
+    "Description": "Changes what page the POS navigates to after logging in",
+    "DataType": "string",
+    "Tickets": ["https://n6k.atlassian.net/browse/OPTR-20309"],
+    "Default": "sales",
+    "Options": [
+      "sales",
+      "customerSearch",
+      "orderSearch",
+      "productSearch",
+      "tasks",
+      "moreOptions"
+    ]
+  },
+  {
     "Name": "App:Pos:DisableNavigationOnOpenAmount",
     "Description": "Indicates whether it is allowed to navigate away from an order with an open amount on the POS",
     "DataType": "bool",
