fix(app-settings): added pos contentful settings

--- a/appsettings.json
+++ b/appsettings.json
@@ -767,6 +767,22 @@
     "Options": []
   },
   {
+    "Name": "App:Pos:Contentful:SpaceID",
+    "Description": "Contentful space ID that contains POS content",
+    "DataType": "string",
+    "Tickets": [],
+    "Default": "false",
+    "Options": []
+  },
+  {
+    "Name": "App:Pos:Contentful:AccessToken",
+    "Description": "Contentful Client delivery token to fetch the content for POS",
+    "DataType": "string",
+    "Tickets": [],
+    "Default": "false",
+    "Options": []
+  },
+  {
     "Name": "App:Feature:RefundOrder:Enabled",
     "Description": "Indicates whether or not to display the refund order button on returns",
     "DataType": "bool",
