--- a/appsettings.json
+++ b/appsettings.json
@@ -909,5 +909,13 @@
     "Tickets": [],
     "Default": null,
     "Options": []
+  },
+  {
+    "Name": "App:Returns:PrefilledOrganizationUnit",
+    "Description": "When set to true the return is automaticaly assigned to the OU that the merchant is currently using,
+    "DataType": "bool",
+    "Tickets": [],
+    "Default": null,
+    "Options": []
   }
 ]
