--- a/appsettings.json
+++ b/appsettings.json
@@ -912,7 +912,7 @@
   },
   {
     "Name": "App:Returns:PrefilledOrganizationUnit",
-    "Description": "When set to true the return is automaticaly assigned to the OU that the merchant is currently using,
+    "Description": "When set to true the return is automaticaly assigned to the OU that the merchant is currently using",
     "DataType": "bool",
     "Tickets": [],
     "Default": null,
