feat(app-settings): add ShowReturnSignatureOnCFD (#14)

--- a/appsettings.json
+++ b/appsettings.json
@@ -917,5 +917,13 @@
     "Tickets": [],
     "Default": null,
     "Options": []
+  },
+  {
+    "Name": "App:ShowReturnSignatureOnCFD",
+    "Description": "Indicates whether or not to display request signature from CFD tile on returns in checkout",
+    "DataType": "bool",
+    "Tickets": ["OPTR-18386"],
+    "Default": "false",
+    "Options": []
   }
 ]
