fix(appsettings): show more app settings for checkout

--- a/appsettings.json
+++ b/appsettings.json
@@ -727,6 +727,14 @@
     "Options": []
   },
   {
+    "Name": "App:Checkout:DisableShowMore",
+    "Description": "Disable ShowMore button",
+    "DataType": "bool",
+    "Tickets": ["OPTR-22134"],
+    "Default": "false",
+    "Options": []
+  },
+  {
     "Name": "App:Pos:DisplayEndOfDayQuestion",
     "Description": "Indicates whether or not to display the end of day question on the POS",
     "DataType": "bool",
