feat(appsettings): rename setting related to auto-refund option

--- a/appsettings.json
+++ b/appsettings.json
@@ -727,11 +727,11 @@
     "Options": []
   },
   {
-    "Name": "App:Checkout:DisableShowMore",
-    "Description": "Disable ShowMore button",
+    "Name": "App:Checkout:PreferAutoRefund",
+    "Description": "Display AutoRefund payment method as the first option",
     "DataType": "bool",
     "Tickets": ["OPTR-22134"],
-    "Default": "false",
+    "Default": "true",
     "Options": []
   },
   {
