feat(appsettings): rename a setting

--- a/appsettings.json
+++ b/appsettings.json
@@ -727,11 +727,11 @@
     "Options": []
   },
   {
-    "Name": "App:Checkout:PreferAutoRefund",
-    "Description": "Display AutoRefund payment method as the first option",
+    "Name": "App:Checkout:HideShowMore",
+    "Description": "Hide ShowMore tile",
     "DataType": "bool",
     "Tickets": ["OPTR-22134"],
-    "Default": "true",
+    "Default": "false",
     "Options": []
   },
   {
