feat(app-setting): add app-login-preferredmethod

--- a/appsettings.json
+++ b/appsettings.json
@@ -949,5 +949,18 @@
     "Tickets": ["OPTR-20938"],
     "Default": "1",
     "Options": []
+  },
+  {
+    "Name": "App:Login:PreferredMethod",
+    "Description": "Dictates what tab to be opened on login",
+    "DataType": "string",
+    "Tickets": ["https://n6k.atlassian.net/browse/OPTR-22804"],
+    "Default": "Email",
+    "Options": [
+      "Email",
+      "QRCode",
+      "SSO",
+      "PIN"
+    ]
   }
 ]
