feat(product): added app setting to hide relations

--- a/appsettings.json
+++ b/appsettings.json
@@ -504,6 +504,14 @@
     "Options": []
   },
   {
+    "Name": "App:Product:HideRelations",
+    "Description": "Hides related products in the product details panel, based on ProductRelationTypeBackendID",
+    "DataType": "string[]",
+    "Tickets": ["OPTR-20390"],
+    "Default": [],
+    "Options": []
+  },
+  {
     "Name": "App:Product:ShowProductStatus",
     "Description": "",
     "DataType": "bool",
