--- a/.github/workflows/jsoncheck.yml
+++ b/.github/workflows/jsoncheck.yml
@@ -15,3 +15,19 @@ jobs:
         uses: limitusus/json-syntax-check@v1
         with:
           pattern: "\\.json$"
+      - name: Validate appsettings.json
+        uses: snapcart/json-schema-validator@v1.0.0
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          json_schema: ./appsettings.schema.json
+          json_path_pattern: ./appsettings.json
+          send_comment: true
+          clear_comments: true
+      - name: Validate countries.json
+        uses: snapcart/json-schema-validator@v1.0.0
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          json_schema: ./countries.schema.json
+          json_path_pattern: ./countries.json
+          send_comment: true
+          clear_comments: false
