--- a/appsettings.json
+++ b/appsettings.json
@@ -835,7 +835,7 @@
     "Description": "",
     "DataType": "bool",
     "Tickets": [],
-    "Default": true,
+    "Default": "true",
     "Options": []
   },
   {
@@ -843,7 +843,7 @@
     "Description": "",
     "DataType": "bool",
     "Tickets": [],
-    "Default": false,
+    "Default": "false",
     "Options": []
   },
   {
