feat(rogue order update): adds app setting defaults
https://n6k.atlassian.net/browse/OPTR-22730

--- a/appsettings.json
+++ b/appsettings.json
@@ -997,5 +997,21 @@
     "Tickets": [],
     "Default": "7",
     "Options": []
+  },
+  {
+    "Name": "App:Order:ShowTakeoverAlert",
+    "Description": "Set to false to disable rogue order takeover alerts",
+    "DataType": "bool",
+    "Tickets": ["OPTR-22730"],
+    "Default": "true",
+    "Options": []
+  },
+  {
+    "Name": "App:Order:IgnoreTakeoverUpdateUsers",
+    "Description": "User IDs in this array will be ignored by the rogue order takeover alert feature",
+    "DataType": "int[]",
+    "Tickets": ["OPTR-22730"],
+    "Default": "",
+    "Options": []
   }
 ]
