feat(optr-22038): implement app setting

--- a/appsettings.json
+++ b/appsettings.json
@@ -576,6 +576,14 @@
     "Options": []
   },
   {
+    "Name": "App:ShowBundleConfigOnAdd",
+    "Description": "Dictates if we show the possible bundle config modal on adding a product to cart",
+    "DataType": "bool",
+    "Tickets": ["OPTR-22038"],
+    "Default": "false",
+    "Options": []
+  },
+  {
     "Name": "App:ShowStationSelectorOnLogin",
     "Description": "Whether we show the station selector after login or not",
     "DataType": "bool",
