--- a/appsettings.json
+++ b/appsettings.json
@@ -1037,5 +1037,13 @@
     "Tickets": [],
     "Default": "ean13,ean8,upce,code39,code128,i2of5,dataMatrix,qr",
     "Options": []
+  },
+  {
+    "Name": "App:ShowIndicationOnInteractionLogs",
+    "Description": "When set to true we show an indication on the interactions tab in order and consumer chapter when there are interacts made on the selected item",
+    "DataType": "bool",
+    "Tickets": ["OPTR-24076"],
+    "Default": "false",
+    "Options": []
   }
 ]
