feat(price-variations): add app setting default

--- a/appsettings.json
+++ b/appsettings.json
@@ -1061,5 +1061,13 @@
     "Tickets": ["OPTR-23808"],
     "Default": "",
     "Options": []
+  },
+  {
+    "Name": "App:Product:ShowPriceProductVariations",
+    "Description": "Determines if we show prices on product variations",
+    "DataType": "bool",
+    "Tickets": ["OPTR-24091"],
+    "Default": "false",
+    "Options": []
   }
 ]
