feat(customer-cases): add app setting default

--- a/appsettings.json
+++ b/appsettings.json
@@ -1069,5 +1069,13 @@
     "Tickets": ["OPTR-24091"],
     "Default": "false",
     "Options": []
+  },
+  {
+    "Name": "App:Customer:ShowCases",
+    "Description": "Determines if we show customer cases on customers",
+    "DataType": "bool",
+    "Tickets": ["OPTR-24596"],
+    "Default": "false",
+    "Options": []
   }
 ]
