feat(back-in-stock): add app setting default

--- a/appsettings.json
+++ b/appsettings.json
@@ -1077,5 +1077,13 @@
     "Tickets": ["OPTR-24596"],
     "Default": "false",
     "Options": []
+  },
+  {
+    "Name": "App:Product:OrganizationUnitBackInStock",
+    "Description": "Determines which WebshopID to use for back in stock notification",
+    "DataType": "int",
+    "Tickets": ["OPTR-24521"],
+    "Default": "0",
+    "Options": []
   }
 ]
