feat(OPTR-19826): added phonenumber lookup setting

--- a/appsettings.json
+++ b/appsettings.json
@@ -216,6 +216,14 @@
     "Options": []
   },
   {
+    "Name": "App:Customer:UsePhoneNumberLookup",
+    "Description": "Dictates if the LinkMobility platform is enabled",
+    "DataType": "bool",
+    "Tickets": ["OPTR-19826"],
+    "Default": "false",
+    "Options": []
+  },
+  {
     "Name": "App:Order:ShowVatNumber",
     "Description": "Whether to show the vat number tile or not",
     "DataType": "bool",
