feat(defaults): add scanner settings

--- a/appsettings.json
+++ b/appsettings.json
@@ -1087,6 +1087,38 @@
     "Options": []
   },
   {
+    "Name": "App:Pos:ShowBarcodeCapture",
+    "Description": "Determines if we show barcode capture buttons",
+    "DataType": "bool",
+    "Tickets": ["OPTR-24685"],
+    "Default": "false",
+    "Options": []
+  },
+  {
+    "Name": "App:Pos:ScannerProvider",
+    "Description": "Determines which scanner we use for barcode capture. Choose between'appleScanner' or 'scandit'",
+    "DataType": "string",
+    "Tickets": ["OPTR-24685"],
+    "Default": "appleScanner",
+    "Options": []
+  },
+  {
+    "Name": "App:Pos:ShowBarcodeCaptureOnLogin",
+    "Description": "This setting will dictates to show (or not) the barcode capture menu option on login/unlock",
+    "DataType": "bool",
+    "Tickets": ["OPTR-24685"],
+    "Default": "false",
+    "Options": []
+  },
+  {
+    "Name": "App:Pos:Scandit:BarcodeCaptureCameraPosition",
+    "Description": "This setting will dictates what Scandit camera position to use. Choose between 'front' or 'back'",
+    "DataType": "string",
+    "Tickets": ["OPTR-24685"],
+    "Default": "back",
+    "Options": []
+  },
+  {
     "Name": "App:Product:OrganizationUnitBackInStock",
     "Description": "Determines which WebshopID to use for back in stock notification",
     "DataType": "int",
