--- a/appsettings.json
+++ b/appsettings.json
@@ -1149,5 +1149,13 @@
     "Tickets": ["OPTR-25481"],
     "Default": "false",
     "Options": []
+  },
+  {
+    "Name": "App:BankDeposits:RequireSignature",
+    "Description": "Signature is required for a new bank deposit",
+    "DataType": "bool",
+    "Tickets": ["OPTR-25482"],
+    "Default": "false",
+    "Options": []
   }
 ]
