fix: add converted field

--- a/appsettings.json
+++ b/appsettings.json
@@ -980,7 +980,8 @@
     "DataType": "string",
     "Tickets": ["OPTR-26228"],
     "Default": null,
-    "Options": ["true", "false", "original", "current"]
+    "Options": ["true", "false", "original", "current"],
+    "Converted": true
   },
   {
     "Name": "App:ShowReturnSignatureOnCFD",
