--- a/appsettings.json
+++ b/appsettings.json
@@ -1175,5 +1175,13 @@
     "Default": "false",
     "Options": [],
     "Converted": true
-  }
+  },
+  {
+    "Name": "App:ConfigurableProduct:ShowView",
+    "Description": "Show the matrix view for x/y configured products",
+    "DataType": "bool",
+    "Tickets": [],
+    "Default": "false",
+    "Options": []
+  }  
 ]
