feat(app setting): show user bough products

--- a/appsettings.json
+++ b/appsettings.json
@@ -1202,5 +1202,14 @@
     "Default": "false",
     "Options": [],
     "Converted": true
+  },
+  {
+    "Name": "App:Customer:ShowBoughtProducts",
+    "Description": "Dictates if we show customer bought products on customers",
+    "DataType": "bool",
+    "Tickets": ["OPTR-27466"],
+    "Default": "false",
+    "Options": [],
+    "Converted": true
   }
 ]
