feat(settings): add datadog settings for apps (#56)
* feat(settings): add datadog setting for apps

* feat(settings): add datadog session replay setting for apps

* feat(datadog): adds more setting

---------

Co-authored-by: Ruben Vinke <ruben@springtree.nl>

--- a/appsettings.json
+++ b/appsettings.json
@@ -224,6 +224,33 @@
     "Options": []
   },
   {
+    "Name": "App:Datadog:Enabled",
+    "Description": "Enable Datadog analytics in the app",
+    "DataType": "bool",
+    "Tickets": [],
+    "Default": "false",
+    "Options": [],
+    "Converted": true
+  },
+  {
+    "Name": "App:Datadog:RUM:SessionReplay:Enabled",
+    "Description": "Enable Datadog session replay functionality in the app",
+    "DataType": "bool",
+    "Tickets": [],
+    "Default": "false",
+    "Options": [],
+    "Converted": true
+  },
+  {
+    "Name": "App:Datadog:Logs:Enabled",
+    "Description": "Enable Datadog console log logging functionality in the app",
+    "DataType": "bool",
+    "Tickets": [],
+    "Default": "false",
+    "Options": [],
+    "Converted": true
+  },
+  {
     "Name": "App:Order:ShowVatNumber",
     "Description": "Whether to show the vat number tile or not",
     "DataType": "bool",
