feat(hide-delete-print-tasks): add app setting (#59)

--- a/appsettings.json
+++ b/appsettings.json
@@ -1213,6 +1213,15 @@
     "Converted": true
   },
   {
+    "Name": "App:PrintTasks:HideDelete",
+    "Description": "Determines whether a bin icon is displayed in the print tasks overview in the Admin Suite, allowing for deletion of a print task.",
+    "DataType": "bool",
+    "Tickets": [],
+    "Default": "false",
+    "Options": [], 
+    "Converted": true 
+  },
+  {
     "Name": "App:Customer:ShowBoughtProducts",
     "Description": "Dictates if we show customer bought products on customers",
     "DataType": "bool",
