--- a/appsettings.json
+++ b/appsettings.json
@@ -1247,5 +1247,14 @@
     "Default": "true",
     "Options": [],
     "Converted": true
+  },
+  {
+    "Name": "App:BankDeposits:DefaultPending",
+    "Description": "Determines whether the checkbox to mark bank deposits as pending is checked by default",
+    "DataType": "bool",
+    "Tickets": ["OPTR-27934"],
+    "Default": "false",
+    "Options": [],
+    "Converted": true
   }
 ]
