--- a/appsettings.json
+++ b/appsettings.json
@@ -1247,5 +1247,14 @@
     "Default": "true",
     "Options": [],
     "Converted": true
+  },
+  {
+    "Name": "App:Checkout:ValidateCashDrawerAmount",
+    "Description": "Enables device cash amount validation for cash refunds",
+    "DataType": "bool",
+    "Tickets": ["OPTR-26277"],
+    "Default": "false",
+    "Options": [],
+    "Converted": true
   }
 ]
