feat: add setting for unified orders filter option (#64)

--- a/appsettings.json
+++ b/appsettings.json
@@ -1265,5 +1265,14 @@
     "Default": "false",
     "Options": [],
     "Converted": true
+  },
+  {
+    "Name": "App:Orders:HideTransferOrders",
+    "Description": "Determines the default state of the transfer orders filter option",
+    "DataType": "bool",
+    "Tickets": ["OPTR-27990"],
+    "Default": "false",
+    "Options": [],
+    "Converted": true
   }
 ]
