feat(app setting): show organisations w/o stock (#65)

--- a/appsettings.json
+++ b/appsettings.json
@@ -1267,6 +1267,15 @@
     "Converted": true
   },
   {
+    "Name": "App:PickupAvailability:IncludeOrganizationUnitsWithoutStock",
+    "Description": "Determines if we show OUs without stock in the pickup point order option",
+    "DataType": "bool",
+    "Tickets": ["OPTR-28632"],
+    "Default": "true",
+    "Options": [],
+    "Converted": true
+  },
+  {
     "Name": "App:Orders:HideTransferOrders",
     "Description": "Determines the default state of the transfer orders filter option",
     "DataType": "bool",
