add barcode custom field (#66)

--- a/appsettings.json
+++ b/appsettings.json
@@ -80,6 +80,15 @@
     "Options": []
   },
   {
+    "Name": "App:Customer:BarcodeCustomField",
+    "Description": "If set there will be a barcode option displayed behind the field in the Loyalty app for the provided BackendID of a user custom field",
+    "DataType": "string",
+    "Tickets": [],
+    "Default": "",
+    "Options": [],
+    "Converted": true
+  },
+  {
     "Name": "App:Customer:Enabled",
     "Description": "Whether to always show the customer attach button in the checkout or not",
     "DataType": "bool",
