feat(OPTR-27999): Partial Payment setting (#67)

--- a/appsettings.json
+++ b/appsettings.json
@@ -652,6 +652,15 @@
     "Options": []
   },
   {
+    "Name": "App:TapToPay:AllowPartialPayment",
+    "Description": "Determines if we need to show partial payment modal",
+    "DataType": "bool",
+    "Tickets": ["OPTR-27999"],
+    "Default": "false",
+    "Options": [],
+    "Converted": true
+  },
+  {
     "Name": "App:ShipFromStore:ShowNetPrices",
     "Description": "",
     "DataType": "bool",
