fix(): added app setting to show/hide debug panel in app suite (#68)

--- a/appsettings.json
+++ b/appsettings.json
@@ -396,6 +396,15 @@
     "Options": []
   },
   {
+    "Name": "App:Suite:DebugEnabled",
+    "Description": "Whether to how the debug panel in app suite, or not",
+    "DataType": "bool",
+    "Tickets": [],
+    "Default": "false",
+    "Options": [],
+    "Converted": true
+  },
+  {
     "Name": "App:StockLabels:Available",
     "Description": "",
     "DataType": "int[]",
