feat: adds App:Offers:Enabled

--- a/appsettings.json
+++ b/appsettings.json
@@ -1319,5 +1319,14 @@
     "Default": "false",
     "Options": [],
     "Converted": true
+  },
+  {
+    "Name": "App:Offers:Enabled",
+    "Description": "Determines if we use the Offers feature.",
+    "DataType": "bool",
+    "Tickets": ["OPTR-31050"],
+    "Default": "false",
+    "Options": [],
+    "Converted": true
   }
 ]
