--- a/appsettings.json
+++ b/appsettings.json
@@ -1321,6 +1321,15 @@
     "Converted": true
   },
   {
+    "Name": "App:CFD:HideGreeting",
+    "Description": "Hides the greeting on CFD for the attached customer.",
+    "DataType": "bool",
+    "Tickets": ["OPTR-30958"],
+    "Default": "false",
+    "Options": [],
+    "Converted": true
+  },
+  {
     "Name": "App:TapToPay:DisableWarmUp",
     "Description": "Disables the Tap To Pay warmup on app startup.",
     "DataType": "bool",
