feat(OPTR-32220): app setting for default giftcard configuration ID (#74)

--- a/appsettings.json
+++ b/appsettings.json
@@ -517,6 +517,15 @@
     "Options": []
   },
   {
+    "Name": "App:GiftCard:DefaultConfigurationID",
+    "Description": "The default giftcard configuration provider ID that will be selected for e.g. the giftcard balance check, so that the user doesn't have to select the most common provider everytime.",
+    "DataType": "string",
+    "Tickets": ["OPTR-32220"],
+    "Default": "",
+    "Options": [],
+    "Converted": true
+  },
+  {
     "Name": "App:CashExpense:WarningThreshold",
     "Description": "Defines a threshold for the maximum cash expense amount (in the currency of the organization) before a warning should be raised, to prevent mistakes. Defaults to null, which means no warning should be raised.",
     "DataType": "decimal",
