--- a/appsettings.json
+++ b/appsettings.json
@@ -1048,11 +1048,20 @@
   },
   {
     "Name": "App:ShowReturnSignatureOnCFD",
-    "Description": "Indicates whether or not to display request signature from CFD tile on returns in checkout",
+    "Description": "Indicates whether or not to display request signature from CFD tile on returns in checkout (deprecated)",
     "DataType": "bool",
     "Tickets": ["OPTR-18386"],
     "Default": "false",
     "Options": []
+  },
+  {
+    "Name": "App:ShowSignatureOnCFD",
+    "Description": "Indicates whether or not to display request signature from CFD tile on signature options in checkout",
+    "DataType": "bool",
+    "Tickets": ["OPTR-32582"],
+    "Default": "false",
+    "Options": [],
+    "Converted": true
   },
   {
     "Name": "App:Customer:AccountType",
