--- a/appsettings.json
+++ b/appsettings.json
@@ -1373,5 +1373,32 @@
     "Default": "",
     "Options": [],
     "Converted": true
+  },
+  {
+    "Name": "App:BankDeposit:ShowExpectedAmount",
+    "Description": "Determines whether the expected amount is shown on the bank deposit screen",
+    "DataType": "bool",
+    "Tickets": ["OPTR-33570"],
+    "Default": "false",
+    "Options": [],
+    "Converted": true
+  },
+  {
+    "Name": "App:CashJournal:UseCashFloat",
+    "Description": "Determines whether the cash float is used when closing a cash journal",
+    "DataType": "bool",
+    "Tickets": ["OPTR-33596"],
+    "Default": "false",
+    "Options": [],
+    "Converted": true
+  },
+  {
+    "Name": "App:Checkout:GroupCustomPaymentTypes",
+    "Description": "Determines whether payment types with the same payment method id are grouped together in the checkout",
+    "DataType": "bool",
+    "Tickets": ["OPTR-33252"],
+    "Default": "false",
+    "Options": [],
+    "Converted": true
   }
 ]
