feat(OPTR-36463): add cashdrawer hideopenbutton setting

--- a/appsettings.json
+++ b/appsettings.json
@@ -1410,5 +1410,14 @@
     "Default": "",
     "Options": [],
     "Converted": true
+  },
+  {
+    "Name": "App:CashDrawer:HideOpenButton",
+    "Description": "Determines if the open cash drawer button in the profile is hidden.",
+    "DataType": "bool",
+    "Tickets": ["OPTR-36463"],
+    "Default": "false",
+    "Options": [],
+    "Converted": true
   }
 ]
