--- a/appsettings.json
+++ b/appsettings.json
@@ -1411,4 +1411,52 @@
     "Options": [],
     "Converted": true
   }
+  {
+    "Name": "App:Repairs:UpdateCaseStatus",
+    "Description": "Determines after which SFS task we should prompt the half modal to update the case status",
+    "DataType": "string[]",
+    "Tickets": ["OPTR-34543"],
+    "Default": "",
+    "Options": [‘Receive’, ‘Execute’, ‘Ship’, ‘Pickup’]
+  }
+  {
+    "Name": "App:FindRepairCustomerViaSerialnumber",
+    "Description": "When enabled, an action menu shows to decide between add via loyalty app or scan product serial number ",
+    "DataType": "string[]",
+    "Tickets": ["OPTR-34548"],
+    "Default": "",
+    "Options": []
+  }
+  {
+    "Name": "App:CycleCount:DisplayProductInformationInPreCount",
+    "Description": "Determines when to display the product information in pre-count ",
+    "DataType": "string[]",
+    "Tickets": ["OPTR-35281"],
+    "Default": "",
+    "Options": []
+  }
+  {
+    "Name": "App:Login:ReentryPrompt",
+    "Description": "The App:Login:ReentryPrompt  will influence when we request to set an PIN code from the user if they don't have a valid PIN code. 0: We will not request the pin again for this user, 1: we will request it on restart of the app, 2: we will request it once a day",
+    "DataType": "string[]",
+    "Tickets": ["OPTR-35940"],
+    "Default": "",
+    "Options": []
+  }
+  {
+    "Name": "App:ShopLocation:Restricted",
+    "Description": "When set to true the feature to allow the use of EVA only within the proximity of the store is enabled",
+    "DataType": "string[]",
+    "Tickets": ["OPTR-33192"],
+    "Default": "",
+    "Options": []
+  }
+  {
+    "Name": "App:ShopLocation:Radius",
+    "Description": "Setting this value to a nummer will create a ‘fence'/radius around the coordinates of the store. If stepped outside we register the user as being outside of the allowed territory.",
+    "DataType": "string[]",
+    "Tickets": ["OPTR-33192"],
+    "Default": "",
+    "Options": []
+  }
 ]
