--- a/appsettings.json
+++ b/appsettings.json
@@ -1112,6 +1112,14 @@
     "Options": []
   },
   {
+    "Name": "App:Scanner:ReceiveGoodsPackSlip:Symbologies",
+    "Description": "Determines scanner symbologies to look for when scanning a pack slip for a Receive Goods task",
+    "DataType": "string[]",
+    "Tickets": ["OPTR-35571"],
+    "Default": "",
+    "Options": ["aztec", "ean13", "ean8", "upce", "code39", "code93", "code93i", "code128", "dataMatrix", "i2of5", "qr", "pdf417", "gs1DataBarExpanded"]
+  },
+  {
     "Name": "App:ShowIndicationOnInteractionLogs",
     "Description": "When set to true we show an indication on the interactions tab in order and consumer chapter when there are interacts made on the selected item",
     "DataType": "bool",
