--- a/appsettings.json
+++ b/appsettings.json
@@ -1427,5 +1427,13 @@
     "Default": "true",
     "Options": [],
     "Converted": true
+  },
+    {
+    "Name": "Product:WarrantyEndpoint",
+    "Description": "Determines whether there is a warranty enproint implemented",
+    "DataType": "string",
+    "Tickets": ["OPTR-35269"],
+    "Default": "",
+    "Options": []
   }
 ]
