Update appsettings.json (#85)

--- a/appsettings.json
+++ b/appsettings.json
@@ -1428,6 +1428,51 @@
     "Options": [],
     "Converted": true
   },
+  {
+    "Name": "App:Order:MaxLineCount",
+    "Description": "Limits amount of order lines shown, default to 50",
+    "DataType": "int",
+    "Tickets": [],
+    "Default": "50",
+    "Options": [],
+    "Converted": true
+  },
+  {
+    "Name": "App:Product:ShowPrintPriceLabel",
+    "Description": "Determines if print price label button gets shown, default to false",
+    "DataType": "bool",
+    "Tickets": [],
+    "Default": "false",
+    "Options": [],
+    "Converted": true
+  },
+  {
+    "Name": "App:Payment:ShowQROnTerminal",
+    "Description": "Determines if EVA Pay QR shows on terminal, default to false. Only works if CFD is not available.",
+    "DataType": "bool",
+    "Tickets": [],
+    "Default": "false",
+    "Options": [],
+    "Converted": true
+  },
+  {
+    "Name": "App:CashDrawer:HideOpenButton",
+    "Description": "Determines if open cash drawer button should not be shown on Checkout app, default to false.",
+    "DataType": "bool",
+    "Tickets": [],
+    "Default": "false",
+    "Options": [],
+    "Converted": true
+  },
+  {
+    "Name": "App:Offers:Enabled",
+    "Description": "",
+    "DataType": "bool",
+    "Tickets": [],
+    "Default": "false",
+    "Options": [],
+    "Converted": true
+  },
     {
     "Name": "Product:WarrantyEndpoint",
     "Description": "Determines whether there is a warranty enproint implemented",
