--- a/appsettings.json
+++ b/appsettings.json
@@ -1472,5 +1472,23 @@
     "Default": "false",
     "Options": [],
     "Converted": true
+  },
+  {
+    "Name": "App:Repairs:DisplayMessage",
+    "Description": "Determines if, while completing an Execute Repair task, a text field is shown for inputting a message for the customer",
+    "DataType": "bool",
+    "Tickets": [],
+    "Default": "false",
+    "Options": [],
+    "Converted": true
+  },
+  {
+    "Name": "App:FindRepairCustomerViaSerialNumber",
+    "Description": "Determines if the user has the option to attach a customer to a Repair via scanning the serial number of a bought product",
+    "DataType": "bool",
+    "Tickets": [],
+    "Default": "false",
+    "Options": [],
+    "Converted": true
   }
 ]
