feat(tests): added support for testing (#94)
* feat(tests): added support for testing

* chore: use node 20

--- a/.github/workflows/jsoncheck.yml
+++ b/.github/workflows/jsoncheck.yml
@@ -3,7 +3,7 @@ name: JSON check
 on:
   push:
     paths:
-      - '**.json'
+      - "**.json"
   pull_request:
 
 jobs:
@@ -25,3 +25,11 @@ jobs:
         with:
           SCHEMA: ./countries.schema.json
           JSONS: ./countries.json
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: "20"
+      - name: Install dependencies
+        run: npm install
+      - name: Run tests
+        run: npm test
